--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Boubacar-bah.github.io/React-project",
+  "homepage": "https://Boubacar-bah.github.io/React-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -40,6 +40,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.27.0"
   }
 }
